# starlite-websockets-hello-world

./: README.md  main.py  pyproject.toml
