[tool.poetry]
name = "starlite-hello-world"
version = "0.1.0"
description = ""
authors = ["Peter Schutt <peter.github@proton.me>"]

[tool.poetry.dependencies]
python = ">3.7"
starlite = "*"
uvicorn = {extras = ["standard"], version = "^0.18"}

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

