[tool.poetry]
name = "starlite-hello-world"
version = "0.1.0"
description = ""
authors = ["Peter Schutt <peter.github@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "*"
uvicorn = {extras = ["standard"], version = "^0.18"}

[tool.poetry.dev-dependencies]
black = "*"
mypy = "^0.961"
pre-commit = "^2.19.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
